--- a/404.html
+++ b/404.html
@@ -47,7 +47,7 @@
           wLocation.replace(base, "/", wLocation)
         );
         console.log(origin + path);
-        window.location = origin + path;
+        window.location = origin + base + path;
       }
     </script>
   </body>
