--- a/404.html
+++ b/404.html
@@ -46,8 +46,8 @@
           "restore",
           wLocation.replace(base, "/", wLocation)
         );
-        console.log(origin + path);
-        window.location = origin + base + path;
+        alert(origin + path);
+        window.location = origin + path;
       }
     </script>
   </body>
