--- a/404.html
+++ b/404.html
@@ -46,8 +46,8 @@
           "restore",
           wLocation.replace(base, "/", wLocation)
         );
-        alert(origin + path);
-        window.location = origin + "rs-clone/" + path;
+        alert(origin + "/rs-clone/" + path);
+        window.location = origin + "/rs-clone/" + path;
       }
     </script>
   </body>
