--- a/404.html
+++ b/404.html
@@ -47,7 +47,7 @@
           wLocation.replace(base, "/", wLocation)
         );
         alert(origin + "/rs-clone/" + path);
-        window.location = origin + "/rs-clone/" + path;
+        window.location = origin + "/rs-clone/404";
       }
     </script>
   </body>
