--- a/404.html
+++ b/404.html
@@ -39,15 +39,12 @@
           "restore",
           wLocation.replace(base, "/", wLocation)
         );
-        console.log(origin + base);
+        console.log(wLocation.replace(base, "/", wLocation));
         window.location = origin + base;
       } else {
-        localStorage.setItem(
-          "restore",
-          wLocation.replace(base, "/", wLocation)
-        );
-
-        window.location = origin + "/rs-clone/404";
+        localStorage.setItem("restore", "/404");
+        console.log(wLocation.replace(base, "/", wLocation));
+        window.location = origin + base;
       }
     </script>
   </body>
