--- a/404.html
+++ b/404.html
@@ -42,7 +42,7 @@
         console.log(wLocation.replace(base, "/", wLocation));
         window.location = origin + base;
       } else {
-        localStorage.setItem("restore", "/404");
+        localStorage.setItem("restore", "https://kristy-user.github.io/404");
         console.log(wLocation.replace(base, "/", wLocation));
         window.location = origin + base;
       }
